--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,9 @@
 
 .bottom-after-border-top-65-center::after{
     left: 50%;
-    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+        -ms-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
     top:65px;
     bottom:0
 }
@@ -67,10 +69,15 @@
     left:22%;
     width: 250px;
     height: 250px;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(100%, #e6eae933), color-stop(0%, #ffffff));
+    background: -o-linear-gradient(bottom, #e6eae933 100%, #ffffff 0%);
     background: linear-gradient(0deg, #e6eae933 100%, #ffffff 0%);
     border-radius: 50px;
-    transform: rotate(45deg);
-    animation: rotate 15s infinite linear; 
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    -webkit-animation: rotate 15s infinite linear;
+            animation: rotate 15s infinite linear; 
 }
 
 .exp-section::after{
@@ -80,18 +87,36 @@
     right:22%;
     width: 250px;
     height: 250px;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(100%, #e6eae933), color-stop(0%, #ffffff));
+    background: -o-linear-gradient(bottom, #e6eae933 100%, #ffffff 0%);
     background: linear-gradient(0deg, #e6eae933 100%, #ffffff 0%);
     border-radius: 50px;
-    transform: rotate(70deg);
-    animation: rotate 15s infinite linear; 
+    -webkit-transform: rotate(70deg);
+        -ms-transform: rotate(70deg);
+            transform: rotate(70deg);
+    -webkit-animation: rotate 15s infinite linear;
+            animation: rotate 15s infinite linear; 
+}
+
+@-webkit-keyframes rotate {
+    from {
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+    }
 }
 
 @keyframes rotate {
     from {
-        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
     }
     to {
-        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
     }
 }
 
@@ -111,8 +136,6 @@
 }
 
 .timeline-block {
-    width: -webkit-calc(50% + 8px);
-    width: -moz-calc(50% + 8px);
     width: calc(50% + 8px);
     display: -webkit-box;
     display: -webkit-flex;
@@ -151,3 +174,43 @@
         height: 200px;
     }
  }
+
+ /* Form Styling */
+ form {
+    /* min-height: 100vh; */
+    max-width: 600px;
+    width: 100%;
+    background: |#fff;
+    padding: 25px 25px 30px;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 0 10px ☐ rgba(0, 0, 0, .1);
+            box-shadow: 0 0 10px ☐ rgba(0, 0, 0, .1);
+    color: #333;
+    margin: 25px;
+}
+
+form .input-box {
+    margin-top: 20px;
+}
+
+form .input-box .field {
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #ddd;
+    outline: none;
+    border-radius: 6px;
+    padding: 15px;
+    font-size: 16px;
+    color: #333;
+    margin-top: 8px;
+}
+
+form .input-box .field.mess {
+    height: 200px;
+    resize: none;
+}
+
+.contact-section{
+    background: linear-gradient(0deg, rgb(245,243,255) 100%, #ffffff 10%);
+}
